--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -46,10 +46,10 @@
     <div class="robot-ear-right"></div>
     <div class="robot-hair-style">
       <div class="robot-hair-one"></div>
-      <div class="robot-hair-two"></div>
+      <div class="robot-hair-two" id="robot-hair-two"></div>
       <div class="robot-hair-three"></div>
-      <div class="robot-hair-2"></div>
-      <div class="robot-hair-1"></div>
+      <div class="robot-hair-two"></div>
+      <div class="robot-hair-one"></div>
     </div>
   </div>
 </body>
